welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.error
indexOfValue:2: error: identifier expected but ')' found.
for (i <-0 to ((T.length.)-1)){
                         ^